<?xml version="1.0"?>
<package> 
  <name>urg_description</name>
  <version>0.1.1</version>
  <description>URDF description of the Hokuyo URG.</description>

  <maintainer email="vincentrou@gmail.com">Vincent Rousseau</maintainer>
  <url>http://wiki.ros.org/urg_node</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
